--- a/src/styles/_variables.scss
+++ b/src/styles/_variables.scss
@@ -2,8 +2,8 @@
   --text-color-orange: #d37d1b;
   --text-color-bright-orange: #ecb26f;
   
-  --header-blue: green;
-  // --header-blue: #243956;
+  // --header-blue: green;
+  --header-blue: #243956;
   --footer-light-brown: #996940;
   --exhibition-background: #ccc;
 }
