--- a/src/app/consumptions/food/add-course/add-course.component.html
+++ b/src/app/consumptions/food/add-course/add-course.component.html
@@ -1,6 +1,6 @@
 
 <div class="" *ngIf="!editMode">
-  Add course to {{mealTypeName}}{{mealTypeId}}
+  Add course to {{mealType}}{{mealTypeId}}
 </div>
 
 <form [formGroup]="form" fxLayout="column">
