--- a/src/app/shared/confirm-delete/confirm-delete.component.html
+++ b/src/app/shared/confirm-delete/confirm-delete.component.html
@@ -1,4 +1,4 @@
-<h3>This will permanently delete the item from the database</h3>
+<h3>This will permanently delete the item and all it's contents from the database</h3>
 <div class="buttons" fxLayout="column" fxLayoutGap="1rem">
   <button
     mat-raised-button
