--- a/src/app/consumptions/food/dinner/dinner.component.scss
+++ b/src/app/consumptions/food/dinner/dinner.component.scss
@@ -32,12 +32,12 @@
   }
 }
 .courses {
-  padding: 1rem;
+  padding: 0 1rem;
   .first-list {
     // border: 1px solid red;
     li {
       .add-course {
-        margin-bottom: .5rem; 
+        margin-bottom: .5rem;
       }
       .courses-list {
         // border: 2px solid black;
@@ -45,9 +45,10 @@
           background-color: var(--header-blue);
           padding: 1rem;
           .edit-name__list-trash {
-            min-width: 350px;
+            // min-width: 350px;
             text-transform: uppercase;
             margin-bottom: 1rem;
+            
             // border: 1px solid blue;
             .edit-name {
               // border: 1px solid green;
@@ -55,8 +56,9 @@
                 color: white;
               }
               .name {
-                border-bottom: 1px solid var(--text-color-orange);
-                color: var(--text-color-bright-orange);
+                // border-bottom: 1px solid var(--text-color-orange);
+                // color: var(--text-color-bright-orange);
+                color: white;
                 font-size: 1.2rem;
               }            
             }
@@ -89,6 +91,7 @@
                     .ingredients {
                       padding-left: 1rem;
                       font-size: .8rem;
+                      text-transform: lowercase;
                     }
                   }
                 }
@@ -106,6 +109,12 @@
                 }
               }
             }
+            .hr {
+              hr {
+                width: 80%;
+                opacity: .2;
+              }
+            }
           }
         }
       }
@@ -117,28 +126,33 @@
   }
 }
 
-// .courses {
-//   display: grid;
-//   border: 5px solid var(--text-color-orange);
+.courses-list {
+  display: grid;
+  grid-column-gap: 1rem;
+  grid-row-gap: 1rem;
+  // border: 5px solid var(--text-color-orange);
+  // border: 10px solid green;
 
-//   // background-color: var(--text-color-orange);
-//   @media (min-width: 320px) and (max-width: 480px) {
-//     grid-template-columns: 1fr;
-//   }
+  // background-color: var(--text-color-orange);
+  @media (min-width: 320px) and (max-width: 480px) {
+    grid-template-columns: 1fr;
+    grid-column-gap: .5rem;
+    grid-row-gap: .5rem;
+  }
 
-//   @media (min-width: 481px) and (max-width: 767px) {
-//     grid-template-columns: 1fr;
-//   }
+  @media (min-width: 481px) and (max-width: 767px) {
+    grid-template-columns: 1fr;
+  }
 
-//   @media (min-width: 768px) and (max-width: 1024px) {
-//     grid-template-columns: 1fr 1fr;
-//   }
+  @media (min-width: 768px) and (max-width: 1024px) {
+    grid-template-columns: 1fr 1fr;
+  }
 
-//   @media (min-width: 1025px) and (max-width: 1399px) {
-//     grid-template-columns: 1fr 1fr 1fr;
-//   }
+  @media (min-width: 1025px) and (max-width: 1399px) {
+    grid-template-columns: 1fr 1fr 1fr;
+  }
 
-//   @media (min-width: 1400px) {
-//     grid-template-columns: 1fr 1fr 1fr 1fr;
-//   }
-// }
+  @media (min-width: 1400px) {
+    grid-template-columns: 1fr 1fr 1fr 1fr;
+  }
+}
