--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -5,7 +5,7 @@
   <mat-sidenav-content>
     <app-header></app-header>
     <main>
-      <router-outlet (activate)="onActivate($event)"></router-outlet>
+      <router-outlet></router-outlet>
       <app-footer></app-footer>
     </main>
   </mat-sidenav-content>
