--- a/src/app/consumptions/food/add-food/add-food.component.html
+++ b/src/app/consumptions/food/add-food/add-food.component.html
@@ -74,16 +74,15 @@
       matInput
       formControlName="price">
     </mat-form-field>
-    <!-- <mat-form-field
-      appearance="fill" class="amount"
-      *ngIf="passedData && passedData.courseName === 'omabobs' || foodItem && foodItem.category === 'omabobs'">
+    <mat-form-field
+      appearance="fill" class="amount">
       <mat-label>AMOUNT</mat-label>
       <input
         type="number"
         matInput
         formControlName="amount"
         placeholder="amount">
-    </mat-form-field> -->
+    </mat-form-field>
     <mat-form-field class="list-position" appearance="fill">
       <mat-label>LIST</mat-label>
       <input
