--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -9,8 +9,9 @@ mat-sidenav {
 }
 
 mat-sidenav {
-  width: 80vw;
+  min-width: 200px;
   max-width: 300px;
+  padding: 1rem;
 }
 app-header {
   position: fixed;
