--- a/src/app/consumptions/drinks/add-drink/add-drink.component.html
+++ b/src/app/consumptions/drinks/add-drink/add-drink.component.html
@@ -1,87 +1,44 @@
 <form fxLayout="column" [formGroup]="addDrinkForm">
-  <mat-form-field  style="display: none;" appearance="outline" *ngIf="editMode">
+  <mat-form-field style="display: none;" appearance="outline" *ngIf="editMode">
     <mat-label>ID</mat-label>
-    <input
-      type="text"
-      matInput
-      readonly
-      formControlName="drinkId"
-      placeholder="ID"/>
-  </mat-form-field>
-
-  <mat-form-field appearance="outline">
-    <mat-label>Category</mat-label>
-    <input
-      readonly
-      type="text"
-      matInput
-      formControlName="category"
-      placeholder="CATEGORY"
-    />
+    <input type="text" matInput readonly formControlName="id" placeholder="ID" />
   </mat-form-field>
 
   <mat-form-field appearance="fill">
     <mat-label>Name Dutch</mat-label>
-    <input
-      type="text"
-      matInput
-      formControlName="nameDutch"
-      placeholder="NAME DUTCH"
-    />
+    <input type="text" matInput formControlName="nameDutch" placeholder="NAME DUTCH" />
   </mat-form-field>
 
   <mat-form-field appearance="fill">
     <mat-label>Name Enlish</mat-label>
-    <input
-      type="text"
-      matInput
-      formControlName="nameEnglish"
-      placeholder="NAME ENGLISH"
-    />
+    <input type="text" matInput formControlName="nameEnglish" placeholder="NAME ENGLISH" />
   </mat-form-field>
 
-  <!-- <mat-form-field appearance="fill">
-    <mat-label>CATEGORY</mat-label>
-    <mat-select formControlName="category" (selectionChange)="onSelectionChange($event)">
-      <mat-option *ngFor="let category of categories" [value]="category">
-        {{category}}
-      </mat-option>
-    </mat-select>
-  </mat-form-field> -->
+  <div class="wine-section" *ngIf="categoryName === 'wine'">
+    <mat-radio-group formControlName="wineType" fxLayout fxLayoutGap="20px">
+      <mat-radio-button value="red">
+        <div class="bottle-icon" fxLayout="column" fxLayoutAlign="center">
+          red
+        </div>
+      </mat-radio-button>
+      <mat-radio-button value="white">
+        <div class="glass-icon" fxLayout="column" fxLayoutAlign="center">
+          white
+        </div>
+      </mat-radio-button>
+    </mat-radio-group>
 
-  <mat-radio-group
-    *ngIf="category === 'wine'"
-    formControlName="wineType"
-    fxLayout
-    fxLayoutGap="20px"
-  >
-    <mat-radio-button value="red">
-      <div class="bottle-icon" fxLayout="column" fxLayoutAlign="center">
-        red
-      </div>
-    </mat-radio-button>
-    <mat-radio-button value="white">
-      <div class="glass-icon" fxLayout="column" fxLayoutAlign="center">
-        white
-      </div>
-    </mat-radio-button>
-  </mat-radio-group>
-
-  <mat-radio-group
-    *ngIf="category === 'wine'"
-    formControlName="wineContainer"
-    fxLayout
-    fxLayoutGap="20px"
-  >
-    <mat-radio-button value="glass">
-      <div fxLayout="column" fxLayoutAlign="center">glass</div>
-    </mat-radio-button>
-    <mat-radio-button value="bottle">
-      <div class="glass-icon" fxLayout="column" fxLayoutAlign="center">
-        bottle
-      </div>
-    </mat-radio-button>
-  </mat-radio-group>
+    <mat-radio-group formControlName="wineContainer" fxLayout fxLayoutGap="20px">
+      <mat-radio-button value="glass">
+        <div fxLayout="column" fxLayoutAlign="center">glass</div>
+      </mat-radio-button>
+      <mat-radio-button value="bottle">
+        <div class="glass-icon" fxLayout="column" fxLayoutAlign="center">
+          bottle
+        </div>
+      </mat-radio-button>
+    </mat-radio-group>
+  </div>
 
   <mat-form-field appearance="fill">
     <mat-label>Price</mat-label>
@@ -90,25 +47,11 @@
 
   <mat-form-field appearance="fill">
     <mat-label>List Position</mat-label>
-    <input
-      type="number"
-      matInput
-      formControlName="listPosition"
-      placeholder="LIST POSITION"
-    />
+    <input type="number" matInput formControlName="listPosition" placeholder="LIST POSITION" />
   </mat-form-field>
 
-  <button
-    mat-raised-button
-    color="primary"
-    type="submit"
-    [disabled]="addDrinkForm.invalid"
-    [mat-dialog-close]="{
-      purpose: 'save changes',
-      formValue: addDrinkForm.value
-    }"
-  >
-    {{ editMode ? "SAVE CHANGES" : "ADD" }}
+  <button mat-raised-button type="submit" [disabled]="addDrinkForm.invalid" [mat-dialog-close]="addDrinkForm.value">
+    {{ editMode ? "update" : "add" }}
   </button>
 
   <!-- <button
@@ -120,7 +63,7 @@
     DELETE
   </button> -->
 
-  <button mat-raised-button color="primary" type="button" mat-dialog-close>
-    CANCEL
+  <button mat-raised-button type="button" mat-dialog-close>
+    cancel
   </button>
 </form>
